syntax = "proto3";

package proto;

option go_package = "internal/app/grpc/proto";

import "internal/app/grpc/proto/requests.proto";

service CompetitionService {
  rpc ListCompetitions(CompetitionRequest) returns (stream Competition) {}
}

message Competition {
  uint64 id = 1;
  string name = 2;
  bool is_cup = 3;
  uint64 country_id = 4;
}
