syntax = "proto3";

package proto;

option go_package = "internal/app/grpc/proto";

import "google/protobuf/wrappers.proto";
import "internal/app/grpc/proto/requests.proto";

service SeasonService {
  rpc GetSeasonsForCompetition(SeasonCompetitionRequest) returns (stream Season) {}
}

message Season {
  uint64 id = 1;
  string name = 2;
  google.protobuf.BoolValue is_current = 3;
}
